# jackstreamingmanager

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  managed_audio_program.rs
src/ui/: main.slint
