[package]
name = "jackstreamingmanager"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = { version = "1", default-features = false, features = ["backend-winit", "renderer-skia", "compat-1-2"] }
sysinfo = "0.35"

[build-dependencies]
slint-build = "1"
